@@ -52,7 +52,8 @@ mv $SRC/config.php.tmpl $CONF
 sed -i "s|db_name.*|db_name = '$DB_NAME';|" $CONF
 sed -i "s|db_username.*|db_username = '$DB_USER';|" $CONF
 sed -i "s|db_password.*|db_password = '$DB_PASS';|" $CONF
-sed -i "s|base_url.*|base_url = 'http://$DOMAIN';|" $CONF
+sed -i "s|\$base_url.*|//\$base_url = 'http://$DOMAIN';|" $CONF
+
 
 chown www-data:www-data $CONF
 chmod 640 $CONF
