@@ -4,5 +4,5 @@
 . /etc/default/inithooks
 
 [ -e $INITHOOKS_CONF ] && . $INITHOOKS_CONF
-$INITHOOKS_PATH/bin/punbb.py --pass="$APP_PASS" --email="$APP_EMAIL" --domain="$APP_DOMAIN"
+$INITHOOKS_PATH/bin/punbb.py --pass="$APP_PASS" --email="$APP_EMAIL"
 
